--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,14 +25,32 @@ steps:
   inputs:
     SonarCloud: 'SonarCloud'
     organization: 'guillermoechague'
-    projectKey: 'guillermoechague_tarea-devops-foundation'
-    projectName: 'tarea-devops-foundation'
+    scannerMode: 'Other'
+    extraProperties: |
+      # Additional properties that will be passed to the scanner,
+      # Put one key=value per line, example:
+      # sonar.exclusions=**/*.bin
+      sonar.projectKey=guillermoechague_tarea-devops-foundation
+      sonar.projectName=tarea-devops-foundation
   displayName: Prepare SonarCloud Analysis
-
+- task: Maven@4
+  inputs:
+    mavenPomFile: 'pom.xml'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    mavenVersionOption: 'Default'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
 - task: Gradle@3
   inputs:
     gradleWrapperFile: 'gradlew'
-    tasks: 'build'
+    tasks: 'sonarCloud'
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
@@ -62,3 +80,7 @@ steps:
     repository: 'tarea-devops-usach'
     command: 'push'
   displayName: Docker Push
+
+- task: KubectlInstaller@0
+  inputs:
+    kubectlVersion: 'latest'
