--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ steps:
     containerRegistry: 'docker-tarea'
     repository: 'echaguiller/tarea-devops'
     command: 'build'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: 
   displayName: Docker Build Image
 
 - task: Docker@2
@@ -75,3 +75,13 @@ steps:
 - task: KubectlInstaller@0
   inputs:
     kubectlVersion: 'latest'
+
+- task: Kubernetes@1
+  inputs:
+    connectionType: 'None'
+    namespace: 'default'
+    command: 'apply'
+    useConfigurationFile: true
+    configuration: '**/deployment.yaml'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
