--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'docker-tarea'
-    repository: 'echaguiller/tarea-devops'
+    repository: 'echaguiller/tarea-devops:4'
     command: 'build'
     Dockerfile: 
   displayName: Docker Build Image
@@ -68,7 +68,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'docker-tarea'
-    repository: 'echaguiller/tarea-devops'
+    repository: 'echaguiller/tarea-devops:4'
     command: 'push'
   displayName: Docker Push
 
@@ -81,7 +81,6 @@ steps:
     connectionType: 'None'
     namespace: 'default'
     command: 'apply'
-    useConfigurationFile: true
-    configuration: '**/deployment.yaml'
+    arguments: '-f  deployment.yaml'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
