--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'docker-tarea'
-    repository: 'echaguiller/tarea-devops:4'
+    repository: 'echaguiller/tarea-devops'
     command: 'build'
     Dockerfile: 
   displayName: Docker Build Image
@@ -68,7 +68,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'docker-tarea'
-    repository: 'echaguiller/tarea-devops:4'
+    repository: 'echaguiller/tarea-devops'
     command: 'push'
   displayName: Docker Push
 
