Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,6 +82,7 @@ steps:
     connectionType: 'None'
     namespace: 'default'
     command: 'apply'
-    arguments: '-f  deployment.yaml'
+    arguments: '-f deployment.yaml'
     secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
+    containerRegistryType: 'Container Registry'
+    dockerRegistryEndpoint: 'docker-tarea'
