--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,8 @@ steps:
 
 - task: Kubernetes@1
   inputs:
-    connectionType: 'None'
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'devops-usach'
     namespace: 'default'
     command: 'apply'
     arguments: '-f deployment.yaml'
