--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,10 +80,11 @@ steps:
 
 - task: Kubernetes@1
   inputs:
-    connectionType: 'Kubernetes Service Connection'
-    kubernetesServiceEndpoint: 'devops-usach'
+    connectionType: 'None'
     namespace: 'default'
     command: 'apply'
+    useConfigurationFile: true
+    configuration: 'deployment.yaml'
     arguments: '-f deployment.yaml'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
