--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,11 +80,9 @@ steps:
 
 - task: Kubernetes@1
   inputs:
-    connectionType: 'None'
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'devops-usach'
     namespace: 'default'
     command: 'apply'
-    useConfigurationFile: true
-    configuration: 'deployment.yaml'
     arguments: '-f deployment.yaml'
-    secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
+    secretType: 'generic'
