--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,8 @@ steps:
     testResultsFiles: '**/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
     sonarQubeRunAnalysis: true
-    sqGradlePluginVersionChoice: 'build'
+    sqGradlePluginVersionChoice: 'specify'
+    sonarQubeGradlePluginVersion: '3.3'
     spotBugsAnalysis: false
   displayName: SonarCloud Analysis
 
