--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,17 @@ steps:
     spotBugsAnalysis: false
   displayName: Build Project
 
+- task: Maven@4
+  inputs:
+    mavenPomFile: 'pom.xml'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    mavenVersionOption: 'Default'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'SonarCloud'
