--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,10 @@
 trigger:
 - feature-ms-guillermoEchague-DevOpsConfigurationJava
 
-pool: 'Default' 
-  #vmImage: ubuntu-latest
+pool: 
+  vmImage: ubuntu-latest
 
 steps:
-
-
 
 
 - task: SonarCloudPrepare@1
@@ -27,17 +25,7 @@ steps:
       sonar.projectName=tarea-devops-foundation
   displayName: Prepare SonarCloud Analysis
 
-- task: Maven@4
-  inputs:
-    mavenPomFile: 'pom.xml'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    mavenVersionOption: 'Default'
-    mavenAuthenticateFeed: false
-    effectivePomSkip: false
-    sonarQubeRunAnalysis: true
-    sqMavenPluginVersionChoice: 'latest'
+
 - task: Gradle@3
   inputs:
     gradleWrapperFile: 'gradlew'
