Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,10 +85,10 @@ steps:
 
 - task: Kubernetes@1
   inputs:
-    connectionType: 'None'
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'kubernets'
     namespace: 'default'
     command: 'apply'
     arguments: '-f deployment.yaml'
-    secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
+    secretType: 'generic'
     
