--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,47 +86,11 @@ steps:
       
 - task: Kubernetes@1
   inputs:
-    connectionType: 'Azure Resource Manager'
-    azureSubscriptionEndpoint: 'azure(9909fced-8203-44b6-af68-11f833a37e60)'
-    azureResourceGroup: 'aks-getting-started'
-    kubernetesCluster: 'aks-getting-started'
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: 'kubernets'
     namespace: 'default'
     command: 'login'
   displayName: AKS Login
 
-- task: Kubernetes@1
-  inputs:
-    connectionType: 'Azure Resource Manager'
-    azureSubscriptionEndpoint: 'azure(9909fced-8203-44b6-af68-11f833a37e60)'
-    azureResourceGroup: 'aks-getting-started'
-    kubernetesCluster: 'aks-getting-started'
-    namespace: 'default'
-    command: 'apply'
-    arguments: '-f kubernetes/deployment-app.yaml'
-    secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
-    azureSubscriptionEndpointForSecrets: 'azure(9909fced-8203-44b6-af68-11f833a37e60)'
-  displayName: AKS deploy
     
-- task: Kubernetes@1
-  inputs:
-    connectionType: 'Azure Resource Manager'
-    azureSubscriptionEndpoint: 'azure(9909fced-8203-44b6-af68-11f833a37e60)'
-    azureResourceGroup: 'aks-getting-started'
-    kubernetesCluster: 'aks-getting-started'
-    namespace: 'default'
-    command: 'expose'
-    arguments: 'deployment petclinic-deployment --type=LoadBalancer --name=pet-clinic'
-    secretType: 'dockerRegistry'
-    containerRegistryType: 'Azure Container Registry'
-  continueOnError: true
-  displayName: Expose deployment
-    
-- script: |
-    ipApp=$(kubectl get services pet-clinic --output jsonpath='{.status.loadBalancer.ingress[0].ip}')
-    echo $ipApp
-    URLApp=http://$ipApp:8085
-    echo $URLApp
-    echo "##vso[task.setvariable variable=appDeploy;isOutput=true]$URLApp"
-  name: getip
-  displayName: Get IP
+
