--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,8 +56,8 @@ steps:
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/MyApp/**/site/cobertura/coverage.xml'
-    pathToSources: 'build/classes/main/'
+    summaryFileLocation: '$(Build.SourcesDirectory)/build/reports/cobertura/test/coverage.xml'
+    pathToSources: '$(Build.SourcesDirectory)/**/reports/cobertura/test/html'
 
 - task: SonarCloudPublish@1
   inputs:
