Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,7 +105,7 @@ steps:
     connectionType: 'None'
     namespace: 'default'
     command: 'apply'
-    arguments: '-f deployment-app.yaml'
+    arguments: '-f deployment.yaml'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'    
 
