--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,13 +14,10 @@ spec:
       labels:
         app: spring-devops
     spec:
+      serviceAccount: sa1
       containers:
       - name: spring-deployment
         image: echaguiller/tarea-devops:latest
         ports:
         - containerPort: 8085
-        resources:
-          request:
-            memory: 500Mi
-            cpu: 0.5
         imagePullPolicy: Always
