Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,8 +61,7 @@ steps:
 
 - task: Kubernetes@1
   inputs:
-    connectionType: 'Kubernetes Service Connection'
-    kubernetesServiceEndpoint: 'kubernets'
+    connectionType: 'None'
     namespace: 'default'
     command: 'apply'
     arguments: '-f deployment.yaml'
