Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
   inputs:
     SonarCloud: 'SonarCloud'
     organization: 'guillermoechague'
-    scannerMode: 'Other'
+    scannerMode: 'CLI'
+    configMode: 'file'
     extraProperties: |
       # Additional properties that will be passed to the scanner,
       # Put one key=value per line, example:
