--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,11 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
     sonarQubeRunAnalysis: true
-    sqGradlePluginVersionChoice: 'specify'
-    sonarQubeGradlePluginVersion: '3.3'
+    sqGradlePluginVersionChoice: 'build'
     spotBugsAnalysis: true
-    spotBugsGradlePluginVersionChoice: 'specify'
-    spotbugsGradlePluginVersion: '4.7.0'
+    spotBugsGradlePluginVersionChoice: 'build'
   displayName: SonarCloud Analysis
 
 
