--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,10 @@ steps:
     tasks: 'sonarqube'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    sonarQubeRunAnalysis: false
+    jdkVersionOption: '1.11'
+    sonarQubeRunAnalysis: true
+    sqGradlePluginVersionChoice: 'specify'
+    sonarQubeGradlePluginVersion: '3.3'
     spotBugsAnalysis: false
   displayName: SonarCloud Analysis
 
