--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,18 @@ steps:
 
 - task: SonarCloudAnalyze@1
 
+- task: Gradle@3
+  inputs:
+    gradleWrapperFile: 'gradlew'
+    tasks: 'build'
+    publishJUnitResults: true
+    testResultsFiles: '**/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    sonarQubeRunAnalysis: true
+    sqGradlePluginVersionChoice: 'specify'
+    sonarQubeGradlePluginVersion: '3.3'
+    spotBugsAnalysis: false
+
 - task: Docker@2
   inputs:
     containerRegistry: 'docker-tarea'
